--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
     "babel-polyfill": "^6.26.0",
+    "file-loader": "^6.0.0",
     "install": "^0.13.0",
     "npm": "^6.14.4",
     "react": "^16.13.1",
