--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-react": "^7.19.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.0",
+    "inline-source-map": "^0.6.2",
     "mini-css-extract-plugin": "^0.9.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.2.0",
