--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.5",
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
@@ -57,6 +58,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.1.0"
   }
