--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "tslint-config-prettier": "^1.18.0"
   }
 }
