--- a/package.json
+++ b/package.json
@@ -29,14 +29,9 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.0",
-    "@typescript-eslint/eslint-plugin": "^2.29.0",
-    "@typescript-eslint/parser": "^2.29.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.10.7",
     "css-loader": "^3.5.3",
-    "eslint": "^6.8.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-react": "^7.19.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.0",
     "inline-source-map": "^0.6.2",
@@ -44,6 +39,7 @@
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.2.0",
     "ts-loader": "^7.0.1",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.8.3",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
@@ -60,7 +56,6 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.1.0",
-    "tslint-config-prettier": "^1.18.0"
+    "styled-components": "^5.1.0"
   }
 }
