--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "allowJs": true,
     "jsx": "react",
     "module": "CommonJS",
     "noImplicitAny": true,
@@ -11,5 +12,6 @@
     "esModuleInterop": true,
     "lib": ["ES2015", "ES2017", "DOM"]
   },
-  "include": ["./src/**/**/*"]
+  "include": ["./src/**/**/*"],
+  "exclude": ["node_modules", "build"]
 }
