--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,10 @@
       "atoms/*": ["src/components/atoms/*"],
       "modules/*": ["src/components/modules/*"],
       "templates/*": ["src/components/templates/*"],
-      "assets/*": ["src/assets/*"]
+      "assets/*": ["src/assets/*"],
+      "data": ["src/data/*"],
+      "hooks": ["src/hooks/*"],
+      "util": ["src/util/*"]
     }
   },
   "include": ["./src/**/**/*", "./src/@types/**/*.d.ts"],
