--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-plugin-styled-components": "^1.10.7",
     "babel-polyfill": "^6.26.0",
     "css-loader": "^3.5.3",
+    "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.0",
     "inline-source-map": "^0.6.2",
