--- a/package.json
+++ b/package.json
@@ -51,13 +51,17 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@types/react-router-redux": "^5.0.18",
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-login": "^5.1.20",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.8",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.1.0"
   }
