--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "target": "es6",
     "esModuleInterop": true,
     "lib": ["ES2015", "ES2017", "DOM"],
+    "moduleResolution": "node",
     "baseUrl": "./",
     "paths": {
       "src/*": ["src/*"],
